--- a/gb/20/1/16/n11798653.md
+++ b/gb/20/1/16/n11798653.md
@@ -1,52 +1,58 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/zsifxm298/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zsifxm298/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/myujtv3571/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/myujtv3571/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/myujtv3571/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/myujtv3571/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>社团理事长观神韵 赞神传文化精彩了不起</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2020/01/5c772efce9ec29e02ae5f22134597c60-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/5c772efce9ec29e02ae5f22134597c60-600x400.jpg" />
 <h6></h6>
 <hr>
-	<p>【大纪元2020年01月17日讯】（大纪元记者吴丽丽日本都府中市报导）2020年1月15日下午，<a href="https://github.com/zsifxm298/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>纽约艺术团在日本首都<a href="https://github.com/zsifxm298/djy/blob/master/gb/tag/%E4%B8%9C%E4%BA%AC%E9%83%BD%E5%BA%9C%E4%B8%AD%E4%B9%8B%E6%A3%AE%E8%89%BA%E6%9C%AF%E5%89%A7%E5%9C%BA.md">东京都府中之森艺术剧场</a>的第二场演出完美落幕。高超精湛的中国古典舞令人叹为观止，演出带领着观众踏上数千年的时空之旅。网球社团千叶理事长秋山忍AkiyamaShinobu和夫人秋山和惠Akiyamakazue，一同观赏了当天的演出，他们大为震撼。秋山表示，观赏神韵，让他第一次了解到中国文化是“<a href="https://github.com/zsifxm298/djy/blob/master/gb/tag/%E7%A5%9E%E4%BC%A0%E6%96%87%E5%8C%96.md">神传文化</a>”。</p>
-<p>秋山理事长赞叹<a href="https://github.com/zsifxm298/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>“了不起，太精彩了！超出了自己的预想”。他表示理解演出中展示的（法轮功学员）反迫害、坚持信仰的内容，认为人类选择善良、抛弃邪恶是理所当然的，并认同神韵艺术团恢复<a href="https://github.com/zsifxm298/djy/blob/master/gb/tag/%E7%A5%9E%E4%BC%A0%E6%96%87%E5%8C%96.md">神传文化</a>的宗旨，“非常好”，他说由此能够领会到中国传统文化的基础与精神信仰有着密切的联系。</p>
-<p>夫人秋山和惠赞叹神韵艺术家所呈现的精湛舞技登峰造极，体现了优雅风韵。这种优雅感染着他们的情绪，秋山和惠说：“每个舞蹈演员的舞技了得，欣赏时就觉得好感动好感动。（神韵演员）旋转的速度很快，跳跃得很高，我看了非常地吃惊，了不起，太精彩了！”</p>
-<p>神韵独特的<a href="https://github.com/zsifxm298/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md">天幕</a>背景以及与演员之间的互动令秋山和惠大开眼界，称神韵的“舞蹈故事内涵宏大”。充满浪漫、智慧、幽默的舞剧，让她眼界大开，感觉“真的很让人惊讶”。</p>
+	<p>【大纪元2020年01月17日讯】（大纪元记者吴丽丽日本东京都府中市报导）2020年1月15日下午，<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团在日本首都<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E4%B8%9C%E4%BA%AC%E9%83%BD%E5%BA%9C%E4%B8%AD%E4%B9%8B%E6%A3%AE%E8%89%BA%E6%9C%AF%E5%89%A7%E5%9C%BA.md#1">东京都府中之森艺术剧场</a>的第二场演出完美落幕。高超精湛的中国古典舞令人叹为观止，演出带领着观众踏上数千年的时空之旅。网球社团千叶理事长秋山忍AkiyamaShinobu和妻子秋山和惠Akiyamakazue，一同观赏了当天的演出，他们大为震撼。秋山表示，观赏神韵，让他第一次了解到中国文化是“<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E7%A5%9E%E4%BC%A0%E6%96%87%E5%8C%96.md#1">神传文化</a>”。</p>
+<p>秋山理事长赞叹<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>“了不起，太精彩了！超出了自己的预想”。他表示，理解演出中展示的（法轮功学员）反迫害、坚持信仰的内容，认为人类选择善良、抛弃邪恶是理所当然的，并认同神韵艺术团恢复<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E7%A5%9E%E4%BC%A0%E6%96%87%E5%8C%96.md#1">神传文化</a>的宗旨，“非常好”，他说由此能够领会到中国传统文化的基础与精神信仰有着密切的联系。</p>
+<p>秋山和惠赞叹神韵艺术家所呈现的精湛舞技登峰造极，体现了优雅风韵。这种优雅感染着他们的情绪，秋山和惠说：“每个舞蹈演员的舞技了得，欣赏时就觉得好感动、好感动。（神韵演员）旋转的速度很快，跳跃得很高，我看了非常地吃惊，了不起，太精彩了！”</p>
+<p>神韵独特的<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>背景以及与演员之间的互动令秋山和惠大开眼界，赞神韵的“舞蹈故事内涵宏大”，充满浪漫、智慧、幽默的舞剧，让她眼界大开，感觉“真的很让人惊讶”。</p>
 <p>她也喜爱神韵中西合璧的乐团，认为现场伴奏的音乐极富有表现力，尤对二胡情有独钟，“音色很美、优雅”。</p>
 <p>她称赞，“声乐家的歌声嘹亮。看到用日语和英语的字幕呈现出来的歌词，我觉得很安心。”</p>
 <p>责任编辑：李雯</p>
 	
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/16/n11798653.htm">社团理事长观神韵 赞神传文化精彩了不起</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/9/n11780250.htm">【无鱼坊的摄影心视界】黑发红痣枝上啼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/2/n11763653.htm">【无鱼坊的摄影心视界】草地小可爱土马鬃</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/27/n11747404.htm">【无鱼坊的摄影心视界】蓝天白云见敖包</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11733185.htm">【无鱼坊的摄影心视界】迷你小花十万错</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11718834.htm">【无鱼坊的摄影心视界】清热防癌绿芦笋</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11687827.htm">【无鱼坊的摄影心视界】向左？向右？</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11796992.htm">【翻墙必看】中共对官员推奇葩要求 贻笑天下</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11797366.htm">越南现2宗疑似武汉肺炎病例 全球8地响警报</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11794395.htm">大陆路面为何频频发生塌陷事件</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11796694.htm">中美贸易协议解读 金融服务领域八大要点</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/4/24/n7677815.htm">家有贤妻  福荫陶门几代人！</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11777539.htm">“蓝出于青”的幽默才子纪晓岚</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740761.htm">“轮回之说”何处来？古老中国的轮回观</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/9/n11778583.htm">【命理】算命能指导一个人发财吗？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11796241.htm">伊朗在变天 中共或失去打击美国的王牌</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11790802.htm">中共外交部胡言乱语实录</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11793980.htm">【唐靖远快评】武统台湾？中共恐有心无力</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11793882.htm">【拍案惊奇】美击杀模式曝光 对伊战略适用中俄</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11796541.htm">【拍案惊奇】首阶段贸易协议 中美各让步什么？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11795863.htm">【新闻看点】川刘大阵势签协议 北京被逼上架</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11794403.htm">澎恰恰重摔致髋骨错位 坐轮椅录影吓坏众人</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788549.htm">田蕊妮不再续约无线 杜汶泽笑言：替TVB难过</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11791826.htm">网民：看了这段短片就知道伊朗“不可怕”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11796365.htm">大陆演艺圈大洗牌？杨紫2019年最走红</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11795438.htm">子瑜放假游荷兰及比利时 羽绒衣裹身也纤细</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/1/15/n11794226.md#1">演员舞姿轻盈 公司老板：神韵就是神之舞</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/1/15/n11795189.md#1">神韵大急流城落幕 主流：相信创世主会归来</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/1/15/n11795643.md#1">室内设计师观神韵：盼神传文化早日回归</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/1/16/n11796550.md#1">“神韵表现神佛世界” 引起日本观众共鸣</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/1/16/n11796573.md#1">四大审计公司高级经理观神韵：顶级之作</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/1/16/n11796741.md#1">百年老报主编赞神韵展现伟大使命 远超期待</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798653.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/myujtv3571/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/25/n10427499.md#1" target="_blank">严家伟：文革中的监狱往事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/29/n10882266.md#1" target="_blank">中共绑架法轮功学员 美国务院：停止迫害</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/1/26/n12711986.md#1">预言试析：共产党亡于何时？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/1/30/n12723183.md#1">【解密时分】懂得鸟语 历史上真有这样的人</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12728948.md#1">【解密时分】斯里兰卡前总统转世农家男孩</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/12/29/n12651261.md#1">轮回转生 冤家变成母子</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/1/18/n12695507.md#1">【命理】被冤枉陷害的好人 皇天能不管吗？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/3/n12731260.md#1">【解密时分】24亿美元 史上十大最贵战机</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/4/n12731871.md#1">【拍案惊奇】CNN忽批贺锦丽 蓬佩奥再警示拜登</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12728803.md#1">【时事军事】以色列警告美 放宽伊朗制裁即宣战</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727425.md#1">接受发型师义剪 流浪汉秒变绅士男震惊网友</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12726784.md#1">【秦鹏直播】缅军方抓昂山素季 急坏拜登习近平？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12728478.md#1">中共官媒群批“厕所革命”打了谁的脸？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/3/n12729203.md#1">黎姿携三个女儿行山 粉丝意外聚焦一双波鞋</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12726330.md#1">51岁周传雄登陆综 22岁孟美岐当导师引狂批</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12726845.md#1">金马影后马思纯疑患抑郁症 停工半年后首发声</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12728875.md#1">获陈坤夸赞阳光又漂亮 杨颖默默点赞视频自励</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727150.md#1">立百病毒致死率高 专家示警下一场大流行威胁</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12726617.md#1">这时喝水排毒快！早晚喝对水养生 还能控血糖</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727769.md#1">英军战机空袭伊拉克洞穴 准确歼灭IS成员</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727507.md#1">2021年2月是个完美矩形 会有大事发生吗？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12726294.md#1">中医师用2种水果干煮水喝 养胃、改善脂肪肝</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/myujtv3571/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/myujtv3571/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/16/n11798653.htm">社团理事长观神韵 赞神传文化精彩了不起</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/myujtv3571/djy/blob/master/gb/20/1/16/n11798653.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/myujtv3571/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/myujtv3571/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/myujtv3571/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
